overflow-x fixed on home

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -87,7 +87,7 @@ html{
     	color: #363636;
     	line-height: 2;
         display: block;
-        width: 100vw;
+        width: 100%;
         height: auto !important;
         position: relative;
         background: #FFF;
